# aisql

./: .pre-commit-config.yml  README.md  pyproject.toml
.gemini/: settings,json  styleguide.md
aisql/: settings.py
apps/backend/: pyproject.toml
apps/backend/aisql/: settings.py
apps/backend/tests/: chat.py  cosine_similarity.py  pgvector_dedup.py  pgvector_store.py  qwen.py  tongyi_llm.py
docs/: plan.md
openspec/changes/backend-user-login/: design.md  proposal.md  tasks.md
openspec/changes/backend-user-login/specs/user-auth/: spec.md
tests/: qwen.py
